feat: 월별 이벤트 조회 시 빈 목록 반환 로직 추가 및 CORS 설정 수정
- 이벤트가 없는 경우 빈 목록 반환하도록 CalendarService 로직 수정
- Spring Validation 의존성 추가
- WebConfig에서 CORS 설정 allowedOrigins를 allowedOriginPatterns로 변경